Fixed body overlap with header and footer, minor changes to header and footer

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-header {
+/*.App-header {
   border: 1px solid black;
   display: block;
   height: 150px;
@@ -14,7 +14,7 @@
   display: block;
   height: 150px;
   padding: 20px;
-}
+}*/
 
 .App-intro {
   font-size: large;
