--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  padding-bottom: 5%;
+  padding-top: 5%;
 }
